setup/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
  namespace: test
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: 'toys.apps.demos.kuadrant.io'
      name: api
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.apps.demos.kuadrant.io'
      name: app
      port: 80
      protocol: HTTP
#    - allowedRoutes:
#        namespaces:
#          from: All
#      hostname: 'app1.apps.demos.kuadrant.io'
#      name: api
#      port: 80
#      protocol: HTTP
